# auri_engine

./: CMakeLists.txt
animation_maker/: CMakeLists.txt  game_mode.cpp  game_mode.hpp  main.cpp
animation_maker/shaders/: ambientlight.frag  dirlight.frag  main_skinned.vert  presentation.frag
cmake/: compile_glsl.cmake
math/: matrix.hpp  quaternion.hpp  vector.hpp
runtime/: CMakeLists.txt
runtime/core/: game_mode.cpp  game_mode.hpp  global_context.hpp  main_loop.cpp  main_loop.hpp
runtime/input/: backend.hpp  input.cpp  input.hpp
runtime/input/backends/: glfw.cpp  glfw.hpp
runtime/render/: anim_mesh_file.cpp  anim_mesh_file.hpp  format.hpp  mesh.cpp  mesh.hpp  mesh_file.cpp  mesh_file.hpp  renderbackend.hpp  renderer.cpp  renderer.hpp  skinned_animation.cpp  skinned_animation.hpp  skinned_mesh.cpp  skinned_mesh.hpp  texture_file.hpp  vertex.hpp
runtime/render/backend_vulkan/: backend.cpp  backend.hpp  format_lookup.cpp  format_lookup.hpp  instance.cpp  instance.hpp  transfer_buffers.cpp  transfer_buffers.hpp  valloc.cpp  valloc.hpp  vertex_input_desc.cpp  vertex_input_desc.hpp  vk_device.cpp  vk_device.hpp  vk_swapchain.cpp  vk_swapchain.hpp
runtime/render/backend_vulkan/primitives/: vk_buffer.cpp  vk_buffer.hpp  vk_cmd_buffer.cpp  vk_cmd_buffer.hpp  vk_cmd_pool.cpp  vk_cmd_pool.hpp  vk_descriptors.cpp  vk_descriptors.hpp  vk_framebuffer.cpp  vk_framebuffer.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_render_pass.cpp  vk_render_pass.hpp  vk_sampler.cpp  vk_sampler.hpp  vk_shader.cpp  vk_shader.hpp  vk_texture.cpp  vk_texture.hpp
runtime/render/backend_vulkan/synchronization/: vk_fence.cpp  vk_fence.hpp  vk_semaphore.cpp  vk_semaphore.hpp
runtime/render/managers/: manager_template.hpp  mesh_manager.cpp  mesh_manager.hpp  shader_list.cpp  shader_list.hpp  texture_manager.cpp  texture_manager.hpp
runtime/render/primitives/: buffer.hpp  cmd_buffer.hpp  cmd_pool.hpp  descriptors.hpp  framebuffer.hpp  pipeline.hpp  render_pass.hpp  sampler.hpp  shader.hpp  texture.hpp
runtime/render/scene/: scene.hpp  scene_camera.cpp  scene_camera.hpp  scene_light.hpp  scene_mesh.cpp  scene_mesh.hpp  scene_skinned_mesh.cpp  scene_skinned_mesh.hpp
runtime/render/stages/: render_stage.cpp  render_stage.hpp  render_stage_geometry.cpp  render_stage_geometry.hpp  render_stage_lighting.cpp  render_stage_lighting.hpp
runtime/render/transform/: matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
samples/: CMakeLists.txt  game_mode.cpp  game_mode.hpp  input.json  main.cpp
samples/shaders/: frag.frag  main.frag  main.vert  presentation.frag  presentation.vert  vert.vert
samples/textures/: texture.tex
tools/: CMakeLists.txt  fbx_converter.cpp  img_converter.cpp
